added the ability to output in Russian

--- a/src/webapp/WEB-INF/pages/cars.html
+++ b/src/webapp/WEB-INF/pages/cars.html
@@ -8,6 +8,9 @@
     <title>CARS</title>
 
 </head>
+<label>
+    <h1> Список машин </h1>
+</label>
 <body>
 <div>
         <th:block th:each="msg : ${messages}">
