--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
+<label>
+    <h1> ПРИВЕТСТВИЕ </h1>
+</label>
 <body>
 <div>
     <th:block th:each="msg : ${messages}">
